# gitastic

./: .gitignore  CONTEXT.md  README.md  config.example.yaml  pyproject.toml
gitastic/: azure_devops.py  config.py  es_setup.py  main.py  transform.py
kibana/: dashboard.ndjson
